# ims.selectfields

./: README.md  pyproject.toml
ims/selectfields/: configure.zcml
ims/selectfields/content/: configure.zcml  interfaces.py  vocabulary.py
ims/selectfields/profiles/default/: types.xml
ims/selectfields/profiles/default/types/: SimpleVocabularyFields.xml  StaticCatalogVocabularyFields.xml  VocabularyFactoryClassFields.xml  VocabularyFactoryFunctionFields.xml
ims/selectfields/search/: __init__.py  configure.zcml
